[package]
name = "blackcoinmore-rpc"
version = "0.17.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "lateminer <lateminer@protonmail.com>",
]
license = "CC0-1.0"
homepage = "https://github.com/CoinBlack/rust-blackcoinmore-rpc/"
repository = "https://github.com/CoinBlack/rust-blackcoinmore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = ["crypto", "bitcoin", "bitcoin-core", "blackcoin", "blackcoin-more", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "blackcoinmore_rpc"
path = "src/lib.rs"

[dependencies]
blackcoinmore-rpc-json = { version = "0.17.0", path = "../json" }

log = "0.4.5"
jsonrpc = "0.14.0"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
