[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
edition = "2018"

[dependencies]
blackcoinmore-rpc = { path = "../client" }
bitcoin = { version = "0.31.0", features = ["serde", "rand", "rand-std"], git = "http://github.com/CoinBlack/rust-blackcoin" }
lazy_static = "1.4.0"
log = "0.4"
