[package]
name = "blackcoinmore-rpc-json"
version = "0.18.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "lateminer <lateminer@protonmail.com>",
]
license = "CC0-1.0"
homepage = "https://github.com/CoinBlack/rust-blackcoinmore-rpc/"
repository = "https://github.com/CoinBlack/rust-blackcoinmore-rpc/"
description = "JSON-enabled type structs for blackcoinmore-rpc crate."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "blackcoin", "blackcoin-more", "rpc" ]
readme = "README.md"
edition = "2018"

[lib]
name = "blackcoinmore_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

bitcoin = { version = "0.31.0", features = ["serde", "rand", "rand-std"], git = "http://github.com/CoinBlack/rust-blackcoin" }
